envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: main
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: echo
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                    headers:
                      - name: "X-Kamailio"
                        exact_match: "test"
                  route:
                    cluster: echo_test_cluster
                - match:
                    prefix: "/"
                  route:
                    cluster: echo_cluster
            http_filters:
            - name: envoy.filters.http.wasm
              typed_config:
                "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                value:
                  config:
                    name: "sip_uri_plugin"
                    root_id: "my_root_id"
                    configuration:
                      "@type": "type.googleapis.com/google.protobuf.StringValue"
                      value: |
                        {}
                    vm_config:
                      runtime: "envoy.wasm.runtime.v8"
                      vm_id: "wasm_virtual_machine_id"
                      code:
                        local:
                          filename: "/etc/envoy/sip_uri_plugin.wasm"
                      configuration: { }
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: echo_cluster
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: echo_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: echo1
                  port_value: 8080
          - endpoint:
              address:
                socket_address:
                  address: echo2
                  port_value: 8080
    - name: echo_test_cluster
      connect_timeout: 3s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: echo_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: echo3
                  port_value: 8080
